--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,12 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0"
+        "php": "^7.4 || ^8.0",
+        "symfony/framework-bundle":     "^5.3",
+        "symfony/security-bundle":      "^5.3",
+        "symfony/options-resolver":     "^5.3",
+        "symfony/monolog-bundle":       "^3.4",
+        "ramsey/uuid": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit":              "^9.5",
