--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "symfony/framework-bundle":     "^5.4 || ^6.0",
-        "symfony/security-bundle":      "^5.4 || ^6.0",
-        "symfony/options-resolver":     "^5.4 || ^6.0",
-        "symfony/monolog-bundle":       "^3.4",
+        "symfony/framework-bundle":     "^6.1",
+        "symfony/security-bundle":      "^6.1"",
+        "symfony/options-resolver":     "^6.1"",
+        "symfony/monolog-bundle":       "^3.7",
         "ramsey/uuid": "^4.2"
     },
     "require-dev": {
